syntax = "proto3";
option java_package = "ir.ms.pb";
option java_multiple_files = true;
option optimize_for = LITE_RUNTIME; //CODE_SIZE;
option go_package = "x";

// gid = unique nano second time;
// sid = scoped id; for future - bot platforms
// cid = common id - seqentaily increase id for user, channels, groups, shops,..

message Action {
  fixed64 action_id = 1;
  uint32 actor_user_id = 2;
  int32 action_type = 3; // todo to enum
  uint32 peer_user_id = 4;
  fixed64 message_id = 5; //post
  fixed64 comment_id = 6;
  int64 hash_murm64 = 7; //Murmur
  uint32 created_time = 8;
}

message Blocked {
  fixed64 id = 1;
  uint32 user_id = 2;
  uint32 blocked_user_id = 3;
  uint32 created_time = 4;
}

message Comment {
  uint64 comment_id = 1;
  uint32 user_id = 2;
  uint64 message_id = 3; // post
  string text = 4;
  int32 likes_count = 5;
  bool edited = 6;
  uint32 created_time = 7;
}

message Followed {
  int64 id = 1;
  int32 user_id = 2;
  int32 followed_user_id = 3;
  int32 created_time = 4;
}

message Like { // like is reserved in RDMS
  int64 id = 1;
  int64 post_id = 2;
  int32 user_id = 3;
  int32 post_type = 4;
  int32 created_time = 5;
}

message Contact {
  int64 id = 1;
  int32 user_id = 2;
  int64 client_id = 3;
  string phone = 4;
  string first_name = 5;
  string last_name = 6;
}

message Post {
  int64 post_id = 1;
  int32 user_id = 2;
  int32 post_type = 3;
  int64 media_id = 4;
  int64 file_ref_id = 5;
  string post_key = 6;
  string text = 7;
  string rich_text = 8;
  int32 media_count = 9;
  int32 shared_to = 10;
  int32 disable_comment = 11;
  int32 via = 12;
  int32 seq = 13;
  int32 comments_count = 14;
  int32 likes_count = 15;
  int32 views_count = 16;
  int32 edited_time = 17;
  int32 created_time = 18;
}

message PostCount {
  int64 post_id = 1;
  int32 comments_count = 2;
  int32 likes_count = 3;
  int64 views_count = 4;
  int32 re_shared_count = 5;
  int32 chat_shared_count = 6;
}

message PostPromoted {
  int32 promote_id = 1;
  int64 post_id = 2;
  int32 by_user_id = 3;
  int32 post_user_id = 4;
  string bazzar_uuid = 5;
  string package = 6;
  int32 end_time = 7;
  int32 created_time = 8;
}

message Session {
  int64 id = 1;
  string session_uuid = 2;
  int32 user_id = 3;
  string last_ip_address = 4;
  int32 app_version = 5;
  int32 active_time = 6;
  int32 created_time = 7;
}

message NotificationSetting {
  int32 user_id = 1;
  int32 social_led_on = 2;
  string social_led_color = 3;
  int32 reqest_to_follow_you = 4;
  int32 followed_you = 5;
  int32 accpted_your_follow_request = 6;
  int32 your_post_liked = 7;
  int32 your_post_commented = 8;
  int32 menthened_you_in_post = 9;
  int32 menthened_you_in_comment = 10;
  int32 your_contacts_joined = 11;
  int32 direct_message = 12;
  int32 direct_alert = 13;
  int32 direct_perview = 14;
  int32 direct_led_on = 15;
  int32 direct_led_color = 16;
  int32 direct_vibrate = 17;
  int32 direct_popup = 18;
  int32 direct_sound = 19;
  int32 direct_priority = 20;
}

message Sms {
  int32 id = 1;
  string hash = 2;
  string app_uuid = 3;
  string client_phone = 4;
  int32 genrated_code = 5;
  string sms_sender_number = 6;
  string sms_send_statues = 7;
  string sms_http_body = 8;
  string err = 9;
  string carrier = 10;
  bytes country = 11;
  int32 is_valid_phone = 12;
  int32 is_confirmed = 13;
  int32 is_login = 14;
  int32 is_register = 15;
  int32 retried_count = 16;
  int32 ttl = 17;
}

message Tag {
  int64 tag_id = 1;
  string name = 2;
  int32 count = 3;
  int32 tag_status_enum = 4;
  int32 is_blocked = 5;
  int32 group_id = 6;
  int32 created_time = 7;
}

message User {
  int32 user_id = 1;
  string user_name = 2;
  string user_name_lower = 3;
  string first_name = 4;
  string last_name = 5;
  int32 is_verified = 6;
  int64 avatar_id = 7;
  int32 access_hash = 8;
  int32 profile_privacy = 9;
  int32 online_privacy = 10;
  int32 call_privacy = 11;
  int32 add_to_group_privacy = 12;
  int32 seen_message_privacy = 13;
  string phone = 14;
  string email = 15;
  string about = 16;
  string password_hash = 17;
  string password_salt = 18;
  int32 post_seq = 19;
  int32 followers_count = 20;
  int32 following_count = 21;
  int32 posts_count = 22;
  int32 media_count = 23;
  int32 photo_count = 24;
  int32 video_count = 25;
  int32 gif_count = 26;
  int32 audio_count = 27;
  int32 voice_count = 28;
  int32 file_count = 29;
  int32 link_count = 30;
  int32 board_count = 31;
  int32 pined_count = 32;
  int32 likes_count = 33;
  int32 reshared_count = 34;
  int32 last_post_time = 35;
  int32 created_time = 36;
  int32 version_time = 37;
  int32 is_deleted = 38;
  int32 is_banned = 39;
}

message UserRelation {
  int64 rel_nano_id = 1;
  int32 user_id = 2;
  int32 peer_user_id = 3;
  int32 follwing = 4;
  int32 followed = 5;
  int32 in_contacts = 6;
  int32 mutual_contact = 7;
  int32 is_favorite = 8;
  int32 notify = 9;
}

message Chat {
  int64 chat_id = 1;
  string chat_key = 2;
  string room_key = 3;
  int32 room_type = 4;
  int32 user_id = 5;
  int32 peer_user_id = 6;
  int64 group_id = 7;
  int64 hash_tag_id = 8;
  string title = 9;
  int64 pin_time_ms = 10;
  int64 from_msg_id = 11;
  int32 unseen_count = 12;
  int32 seq = 13;
  int64 last_msg_id = 14;
  int32 last_my_msg_status = 15;
  int32 my_last_seen_seq = 16;
  int64 my_last_seen_msg_id = 17;
  int64 peer_last_seen_msg_id = 18;
  int32 my_last_delivered_seq = 19;
  int64 my_last_delivered_msg_id = 20;
  int64 peer_last_delivered_msg_id = 21;
  int32 is_active = 22;
  int32 is_left = 23;
  int32 is_creator = 24;
  int32 is_kicked = 25;
  int32 is_admin = 26;
  int32 is_deactivated = 27;
  int32 is_muted = 28;
  int32 mute_until = 29;
  int64 version_time_ms = 30;
  int32 version_seq = 31;
  int32 order_time = 32;
  int32 created_time = 33;
  string draft_text = 34;
  int64 drat_reply_to_msg_id = 35;
}

message Group {
  int64 group_id = 1;
  string group_key = 2;
  string group_name = 3;
  string user_name = 4;
  int32 is_super_group = 5;
  int64 hash_tag_id = 6;
  int32 creator_user_id = 7;
  int32 group_privacy = 8;
  int32 history_view_able = 9;
  int64 seq = 10;
  int64 last_msg_id = 11;
  int64 pined_msg_id = 12;
  int64 avatar_ref_id = 13;
  int32 avatar_count = 14;
  string about = 15;
  string invite_link_hash = 16;
  int32 members_count = 17;
  int32 admins_count = 18;
  int32 moderator_counts = 19;
  int32 sort_time = 20;
  int32 created_time = 21;
  int32 is_mute = 22;
  int32 is_deleted = 23;
  int32 is_banned = 24;
}

message GroupMember {
  int64 order_id = 1;
  int64 group_id = 2;
  int32 user_id = 3;
  int32 by_user_id = 4;
  int32 group_role = 5;
  int32 created_time = 6;
}

message FileMsg {
  int64 id = 1;
  int32 access_hash = 2;
  int32 file_type = 3;
  int32 width = 4;
  int32 height = 5;
  string extension = 6;
  int32 user_id = 7;
  bytes data_thumb = 8;
  bytes data = 9;
}


